--- a/index.html
+++ b/index.html
@@ -113,18 +113,30 @@
 	<!-- Portfolio Grid Section -->
 	<section id="store" class="bg-light-gray">
 		<div class="container">
-			<div class="well">
-				<span>Cart Total: {{cart.subTotal | currency}}</span>
-				<a class="btn btn-info pull-right" ng-click="tools.cart.checkout()">Pay With Card</a>
-			</div>
 			<div  class="row">
 				<div class="col-md-4" ng-repeat="item in store.items">
 					<div class="card">
 						<h1>{{item.title}}</h1>
 						<a class="label label-warning" ng-show="item.quantity" ng-click="tools.cart.remove(item)">{{item.quantity}} In Cart</a>
 						<img class="img-responsive" src="{{item.img}}"></img>
-						<a class="btn btn-block btn-success" ng-click="tools.cart.add(item)">Add To Cart</a>
+						<div class="banner clearfix">
+							<span>{{item.price | currency}}</span>
+							<a class="btn btn-success pull-right" ng-click="tools.cart.add(item)">Add To Cart</a>
+						</div>
 					</div>
+				</div>
+			</div>
+			<hr>
+			<div  class="row">
+				<div class="col-md-4 col-md-offset-4">
+					<p>Sub Total: {{cart.subTotal | currency}}</p>
+					<p>Shipping: {{shipping | currency}}</p>
+					<p>Total: {{total | currency}}</p>
+					<div class="input-group">
+						<input type="text" class="form-control" placeholder="zip code">
+						<a class="input-group-addon" ng-click="tools.cart.calculate()">Calculate</a>
+					</div>
+					<a class="btn btn-info btn-block" ng-click="tools.cart.checkout()">Checkout</a>
 				</div>
 			</div>
 		</div>
