Made page to view purchase summary

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 						</tr>
 						<tr>
 							<td>Discounts:</td>
-							<td>{{cart.discounts | currency}}</td>
+							<td>{{discount | currency}}</td>
 						</tr>
 						<tr>
 							<td>Total:</td>
