--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 			<!--		<h3 class="section-subheading text-muted">Once upon a dream.</h3>-->
 			<!--	</div>-->
 			<!--</div>-->
+			<h1 style="text-align: center; padding: 20px; background: #FF6; border: 5px dotted #f7f7f7; color: #060;">Buy 12 jars of salsa, and get $10 off.</h1>
 			<div class="row text-center">
 				<div class="col-md-4">
 					<span class="fa-stack fa-4x">
